# meetingbot

./: .env.local  .gitignore  docker-compose.yml  readme.md  run.sh  todo.md  tree.txt
chatbots/: Dockerfile  README.md  openapi.yaml  pyproject.toml
chatbots/_k8s/beta/: sa.yaml
chatbots/elmybots/: __main__.py  app.py  bot_setup.py  config.py
chatbots/elmybots/bots/: selector.py  template.py
chatbots/elmybots/bots/botonality/: SCRIBE.txt  selector.py
chatbots/elmybots/bots/implements/bot/: gemini_bot.py  oai_bot.py  scribe.py
chatbots/elmybots/models/: base64.py
chatbots/elmybots/routes/: health.py  messages.py
chatbots/elmybots/tests/: conftest.py  test_config.py
chatbots/elmybots/tests/bots/: test_factory.py  test_selector.py  test_template.py
chatbots/elmybots/tests/bots/implements/bot/: test_gemini_bot.py  test_oai_bot.py
chatbots/elmybots/tools/: decorators.py  mylogger.py
core/: Dockerfile  README.md  conftest.py  create_avatar_mjpeg.sh  deploy.sh  job_main.py  main.py  openapi.yaml  pyproject.toml  rest_api.py  test_chrome_min.py
core/libot/: audio.py  avatar.py  briefing.py  browser.py  compress.py  config.py  gcs.py  gemini.py  js_scripts.py  logger.py  mailer.py  meeting.py  recorder.py  routes.py
core/tests/: conftest.py  test_compress.py  test_compress_audio_golden.py  test_config_and_logger.py  test_gcs.py  test_routes.py
functions/: main.py  (+3 more)
meet-asbot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
meet-asbot/libot/: __init__.py  all.py  audio.py  avatar.py  browser.py  compress.py  config.py  gcs.py  gemini.py  js_scripts.py  logger.py  meeting.py  recorder.py
(+14 files in other folders)
